--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(C_OOP C)
 
 set(CMAKE_C_STANDARD 11)
 
-add_executable(C_OOP main.c Class.c Class.h)
+add_executable(C_OOP main.c Class.c Class.h Template.c Template.h)
